style.css
/* ... */
.primary-footer__wrapper > * {
  margin-inline: auto;
}

.primary-footer__logo {
  grid-area: logo;
}

.primary-footer__form {
  display: flex;
  gap: var(--size-200);
  grid-area: form;
}

.primary-footer__copyright {
  grid-area: copyright;
  text-align: center;
  opacity: 0.7;
}

.primary-footer__nav-wrapper {
  grid-area: nav;
  margin-inline: auto;
}

/* footer navigation */

.footer-nav {
  columns: 2;
  gap: clamp(4rem, 10vw, 7rem);
}

.footer-nav a {
  color: var(--clr-neutral-100);
  text-decoration: none;
}

.footer-nav a:is(:hover, :focus) {
  color: var(--clr-accent-400);
}

/* .primary-footer-form {
  grid-area: form;

  display: grid;
  align-content: space-between;
} */

input:where([type="text"], [type="email"], ) {
  border-radius: 100vw;
  border: 0;
  padding: var(--size-300) var(--size-500);
  width: max(100%, 14rem);
}

/* social list */

.social-list {
  display: flex;
  gap: var(--size-600);
}

.social-icon {
  width: var(--size-600);
  aspect-ratio: 1;
  fill: var(--clr-neutral-100);
}

.social-list a:is(:hover, :focus) .social-icon {
  fill: var(--clr-accent-400);
}

/* cta */

.cta {
  position: relative;
  isolation: isolate;
  text-align: center;
}

.cta::before {
  content: "";
  position: absolute;
  z-index: -1;
  inset: 0;
  background-image: url("images/bg-tablet-pattern.svg"),
    url("images/bg-tablet-pattern.svg");
  background-position: -15rem -5rem, 80rem -42rem;
  background-repeat: no-repeat;
  opacity: 0.1;
}

/* numbered items */

.numbered-items {
  counter-reset: count;
  width: fit-content;
  margin-inline: auto;
}

.numbered-items li {
  counter-increment: count;
}

.numbered-items div {
  display: grid;
  position: relative;
  align-items: center;
  column-gap: var(--size-300);
  grid-template-columns: min-content 1fr;
}

.numbered-items__title {
  grid-row: 1 / 2;
  grid-column: 2 / 3;
  line-height: 1;
}

.numbered-items__body {
  grid-column: 1 / -1;
}

@media (min-width: 30em) {
  .numbered-items__body {
    grid-column: 2 / -1;
  }
}

.numbered-items div::before,
.numbered-items div::after {
  height: 40px;
}

.numbered-items div::before {
  content: "0" counter(count);
  display: flex;
  align-items: center;
  color: var(--clr-neutral-100);
  font-weight: var(--fw-bold);
  background-color: var(--clr-accent-400);
  padding: 0 var(--size-500);
  border-radius: 100vw;
  grid-row: 1 / 2;
  grid-column: 1 / 2;
}

/* slider */

.slider {
  display: flex;
  gap: var(--size-600);
  list-style: none;
}

.a11y-slider-container {
  margin-block: var(--size-700);
  margin-inline: var(--size-400);
}

.slider > * {
  position: relative;
  flex: 0 0 auto;
  width: 100%;
}

.slider-content {
  border-radius: var(--size-100);
  padding: var(--size-700) var(--size-600) var(--size-600);
  background: var(--clr-neutral-200);
}

.slider img {
  width: var(--size-800);
  position: relative;
  top: calc(var(--size-800) / 2);
  margin-inline: auto;
}
.a11y-slider-dots {
  display: flex;
  justify-content: center;
  margin-block: var(--size-500);
  gap: var(--size-300);
}
.a11y-slider-dots li {
  display: block;
  width: 12px;
  height: 12px;
  padding: 0;
}

.a11y-slider-dots li button {
  display: block;
  font-size: 0;
  text-indent: -9999px;
  background: transparent;
  border: 1px solid var(--clr-accent-400) !important;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.a11y-slider-dots li button.active {
  background: var(--clr-accent-400);
}

/*image w blob bg*/

.hero__image::before {
  content: "";
  position: absolute;
  right: 0;
  top: 0;
  width: 87%;
  max-height: 70vh;
  max-height: 70dvh;
  aspect-ratio: 1 / 1.2;
  background-image: url("images/bg-tablet-pattern.svg");
  background-repeat: no-repeat;
  z-index: -1;
  background-position: bottom left;
}

/* sales points */

.sales-points__blog {
  position: relative;
}

.sales-points__blog::before {
  content: url("images/bg-tablet-pattern.svg");
  position: absolute;
  left: 70%;
  bottom: 120%;
  width: 100px;
  zoom: 40%;
  z-index: -2;
}

/* Media Querys (Responsiveness)*/

@media (min-width: 47em) {
  .primary-footer__wrapper {
    grid-template-areas:
      "logo nav form"
      "social nav copyright";

    grid-template-columns: min-content 1fr auto;
  }

  .primary-footer__copyright {
    text-align: right;
  }

  .social-list {
    gap: var(--size-300);
  }

  .social-icon {
    width: var(--size-500);
    max-width: revert;
  }

  .cta {
    text-align: left;
  }

  .slider > * {
    width: 35%;
  }

  .hero__image::before {
    width: 45%;
  }

  .sales-points__blog::before {
    zoom: 70%;
    z-index: -1;
    left: -500px;
    top: 42%;
    width: 100px;
  }

  .even-columns {
    grid-auto-flow: column;
    grid-auto-columns: 1fr;
  }

  .justify-self-end-md {
    justify-self: end;
  }

  .display-md-inline-flex {
    display: inline-flex;
  }

  .hero1 {
    text-align: left;
  }
}
/* ... */

